--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     // Giriş kontrol ve animasyonlar
     function Kontrol() {
       var yetkiler = ["Admin", "Burak", "Edanur","Irmak","Yusuf","Enes","Abdulkadir","Zeynep","User1881","Osman"];
-      var sifreler = ["314159", "Karageçi", "Kılıç","Karageçi","Kaya","Çiçekli","Kılınç","Çelikten","1938","Polat"];
+      var sifreler = ["314159", "Karageçi", "Kılıç","Karageçi","Kaya","Çiçekli","Kılınç","Çelikten","1938","Uludağ"];
       var kullanici = document.getElementById("YetkiTipi").value;
       var sifre = document.getElementById("Sifre").value;
       var index = yetkiler.indexOf(kullanici);
